--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "multer": "^2.0.2",
     "nodemailer": "^6.9.1",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
